mejoras nav bar

--- a/pages/Burgers.html
+++ b/pages/Burgers.html
@@ -15,16 +15,20 @@
 
 <body>
     <header>
-        
-        <nav class="navbar" id="header-nav">
+        <nav class="navbar navbar-expand-lg" id="header-nav">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="../assets/food_icon_2.png" alt="Logo" width="60" height="60"
                         class="d-inline-block align-text-center">
                     TastyLand
                 </a>
-                <div class="nav-items">
-                    <ul class="nav justify-content-end">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                    <ul class="navbar-nav  mb-2 mb-lg-0 ">
                         <li class="nav-item">
                             <a class="nav-link" href="../index.html">Barbacues</a>
                         </li>
@@ -32,21 +36,21 @@
                             <a class="nav-link active" aria-current="page" href="#">Burgers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/Pizzas.html">Pizzas</a>
+                            <a class="nav-link" href="./Pizzas.html">Pizzas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./Sandwiches.html">Sandwiches</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/Breads.html">Breads</a>
+                            <a class="nav-link" href="./Breads.html">Breads</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./Top-Food.html">Top Food</a>
                         </li>
+                        </li>
                     </ul>
                 </div>
             </div>
-            
         </nav>
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
