--- a/index.html
+++ b/index.html
@@ -15,8 +15,45 @@
 
 <body>
     <header>
-        
-        <nav class="navbar" id="header-nav">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="../assets/food_icon_2.png" alt="Logo" width="60" height="60"
+                        class="d-inline-block align-text-center">
+                    TastyLand
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                    <ul class="navbar-nav  mb-2 mb-lg-0 ">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="./index.html">Barbacues</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="./pages/Burgers.html">Burgers</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/Pizzas.html">Pizzas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/Sandwiches.html">Sandwiches</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/Breads.html">Breads</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/pages/Top-Food.html">Top Food</a>
+                        </li>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <!-- <nav class="navbar" id="header-nav">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="./assets/food_icon_2.png" alt="Logo" width="60" height="60"
@@ -48,7 +85,7 @@
                 </div>
             </div>
             
-        </nav>
+        </nav> -->
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
